--- a/src/blocks/profile/__image/profile__image.css
+++ b/src/blocks/profile/__image/profile__image.css
@@ -1,4 +1,8 @@
 .profile__image {
+  position: relative;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   width: 120px;
   height: 120px;
   -webkit-border-radius: 50%;
@@ -7,6 +11,30 @@
   background-size: cover;
   background-position: center;
   margin: 0 29px 0 0;
+}
+
+.profile__image:hover:before {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	top: 0;
+	left: 0;
+	right: 0;
+	bottom: 0;
+	background-color:rgba(0, 0, 0, .5);
+}
+.profile__image:hover .profile__image-decor-element{
+  opacity: 1;
+}
+
+.profile__image-decor-element {
+  position: absolute;
+  display: block;
+  width: 26px;
+  height: 26px;
+  opacity: 0;
 }
 
 @media screen and (max-width: 740px) {
